# find-my-kitten

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  .isaac_ros_common-config  Baseboard_deviations_from_tutorial.md  Dockerfile.catscanners  Dockerfile.isaacsim  Jetson_PX4build_and_upload.md  LICENSE  NTRIP_corrections.md  README.md  ROS2 Compiled Guide.md  ROS2-PX4-via-uXRCE-DDS.md  corrput-video.md  default.cfg.rviz  drone-simulators.md  flake.nix  isaac-ros.md  jetson-setup.md  px4_simple_app.c  pyproject.toml  ros2-basics.md  rviz.sh  start_isaac_dev.sh  ulog-parsing.md
.github/ISSUE_TEMPLATE/: coding-task.md  research-task.md
.github/workflows/: build_ros2_ws.yml  publish_ci_image.yml  publish_isaac_ros_dev.yml  publish_sim_image.yml
Documents/: DepthAI-and-Zed-SDK-setup-Ubuntu22.md  RTK_GNSS_doc.md  Telemetry_radio_test.md  jetson-setup.md
bag_SLAM_stats/: run.sh
ci/: ros2-humble-ci.dockerfile
devcontainer/: .isaac_ros_common-config  general_bashrc.sh  isaacsim_bashrc.sh  isaacsim_entrypoint.sh
docs/: _config.yml  drone-simulators.md  index.md  jetson-orin.md
docs/3D Print Parts/: 3D_printing_manual.md  ModifiedDroneLeg.blend  ModifiedDroneLeg.stl  sourceModel.txt
docs/Development/: Creating documentation with GitHub pages.md  DepthAI-and-Zed-SDK-setup-Ubuntu22.md  Information about hardware, licensing and possible libraries.md  argus-kitten.md  devcontainer.md  index.md  vision_package.md  visual_navigation.md  vslam.md
docs/Flight tests/: general.md  index.md
docs/Hardware setup/: Baseboard setup - deviations from tutorial.md  Isaac ROS setup.md  Jetson Orin (Devkit) setup.md  index.md
docs/Introduction/: Introduction.md  Not-so-quick start.md  index.md
docs/IsaacSim/: Common problems.md  Installing.md  Running IsaacSim.md
docs/Jetsons & Pixhawk/: Baseboard setup - deviations from tutorial.md  DepthAI-and-Zed-SDK-setup-Ubuntu22.md  Isaac ROS setup.md  Jetson Orin (Baseboard & Devkit) setup.md  Jetson Orin (Devkit) setup.md  PX4 Hello World guide.md  PX4 and Jetson Communication via uXRCE-DDS Guide.md  ROS2 Compiled Guide.md  ROS2 Recording System and Corrupted Database Recovery.md  index.md  isaac_ros_yolov8.md  jetson-setup.md  (+2 more)
drone/: only_yolo.topics  px4_params.txt  record-bag.sh  vslam.topics  vslam_yolo.topics  yolo.topics
experimental/: .gitignore  CMakeLists.txt  DockerFile  README.md  init_docker.sh  plot.py
experimental/modules/GPU/: GPU.cu
experimental/modules/benchmarks/FIFO/: FIFO_datarate.cpp
experimental/modules/benchmarks/GPU/: dataTransfer.cu
experimental/modules/benchmarks_general/: CMakeLists.txt  build.sh
experimental/modules/benchmarks_general/FIFO/: FIFO_datarate.cpp
experimental/modules/benchmarks_general/GPU_memory_transfer/: dataTransfer.cu
experimental/modules/benchmarks_general/camera/: camera_pipe.cpp
experimental/modules/benchmarks_general/display/: display_images.cpp
experimental/modules/benchmarks_general/kernels/: GPU.cu  kernel.h  note.txt
experimental/modules/benchmarks_general/util/: GPU.cu  GPU.h  camera.cpp  camera.hpp  image.cpp  image.hpp  pipe.cpp  pipe.hpp
experimental/modules/benchmarks_general/video/: Video.cpp
experimental/modules/camera/: run.sh
experimental/modules/display/: display_images.cpp
experimental/modules/pointOdometry/: README.md  compile.sh  doodles.cpp  interface.cpp  pointOdometry.cpp  run.sh
experimental/modules/util/: GPU.cu  GPU.h  Quaternion.cpp  Quaternion.hpp  camera.h  drone.cpp  drone.hpp  examplePoints.cpp  examplePoints.hpp  frameData.hpp  inputPoint.hpp  pointOdometry.cpp  pointOdometry.hpp  timer.cpp  timer.hpp  vector2D.hpp  vector3D.cpp  vector3D.hpp
experimental/testData/: 0038_26_m.txt  0038_26_x.txt  plot.py  plot2.py  points.txt
experimental/util/: b_fifo  b_gpu  camera  display  pointOdometry  video
log/: latest_build
models/: README.md  ball_tree_26m.pt  ball_tree_26n.pt
points/: points.txt  yolo_point.py
ros2_ws/: .gitignore  .isaac_ros_common-config  Dockerfile  Dockerfile.catscanners  motions.sh  requirements.txt  start_isaac_dev.sh
ros2_ws/src/navigation_package/navigation_package/: CMakeLists.txt  package.xml
ros2_ws/src/navigation_package/navigation_package/navigation_package/: deviation_visualizer.py
ros2_ws/src/navigation_package/navigation_package/src/: .target_deviation.cpp.swp  target_deviation.cpp
ros2_ws/src/px4_handler/px4_handler/: CMakeLists.txt  README.md  package.xml
ros2_ws/src/px4_handler/px4_handler/src/cpp/: offboard_control.cpp
ros2_ws/src/px4_handler/px4_handler/src/py/: ball_finder.py  hard_motions.py
ros2_ws/src/vision_package/: .Vision_Package.md.swp  .dockerignore  CMakeLists.txt  Dockerfile  README.md  Vision_Package.md  docker_build_run.sh  package.xml  requirements.txt  ros_dependencies.txt  run_object_recognizer.sh  run_publisher_subscriber.sh  run_vision_package.sh  vision package specific setup.md
ros2_ws/src/vision_package/launch/: object_detector.launch.py
ros2_ws/src/vision_package/scripts/: arducam_publisher.py  ball_detector.py  object_detector.py  object_tracker.py  record_video_from_rosbag.py  track_publisher.py  video_publisher.py
ros2_ws/src/vision_package/src/: cv_bridge_compat.hpp  image_publisher.cpp  image_subscriber.cpp
ros2_ws/src/vision_package/vision_package/: CMakeLists.txt  package.xml
ros2_ws/src/vision_package/vision_package/include/vision_package/: variables.hpp
ros2_ws/src/vision_package/vision_package/src/: image_publisher.cpp  image_subscriber.cpp
ros2_ws/src/vision_package/vision_package/vision_package/: ball_detector.py  object_detector.py  object_recognizer.py  object_tracker.py  track_publisher.py  video_publisher.py
ros2_ws/src/visual_navigation/: CMakeLists.txt  package.xml
ros2_ws/src/visual_navigation/launch/: stereo.launch.py  stereo_vslam.launch.py  vslam.launch.py
ros2_ws/src/visual_navigation/src/: point_odometry.cpp  stereo_publisher.cpp  vslam_message_transform.cpp
simulation/: Docker-sim-instructions.md  Dockerfile  docker-sim-instructions.md  instructions.md  setup.sh  start_isaac_sim.sh  startsim.sh
(+145 files in other folders)
