[project]
name = "find-my-kitten"
version = "0.1.0"
requires-python = ">=3.10.10"
dependencies = [
    "numpy<2.0.0",
    "opencv-python",
    "torch>=1.1.0",
    "torchvision",
    "pandas",
    "yt-dlp",
    "supervision",
    "empy==3.3.4",
    "pyros-genmsg",
    "setuptools",
    "kconfiglib",
    "jsonschema",
    "jinja2",
    "pyserial",
    "pyyaml",
    "packaging",
    "toml",
    "catkin_pkg",
    "lark",
    "ultralytics",
    "seaborn",
    "smmap>=5.0.2",
    "gitpython>=3.1.46",
    "scipy>=1.15.3",
]

[dependency-groups]
isaacsim = [
    "gitpython",
    "scipy",
    "smmap",
]
