[project]
name = "find-my-kitten"
version = "0.1.0"
requires-python = ">=3.10.10"
dependencies = [
    "numpy<2.0.0",
    "opencv-python",
    "pandas",
    "yt-dlp",
    "supervision",
    "empy==3.3.4",
    "pyros-genmsg",
    "setuptools",
    "kconfiglib",
    "jsonschema",
    "jinja2",
    "pyserial",
    "pyyaml",
    "packaging",
    "toml",
    "catkin_pkg",
    "lark",
    "ultralytics",
    "seaborn",
    "torchvision",
    "torch==2.10.0",
    "lap",
]

[dependency-groups]
isaacsim = [
    "gitpython",
    "scipy",
    "smmap",
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = [ { index = "pytorch-cu126" } ]
torchvision = [ { index = "pytorch-cu126" } ]
