<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>px4_handler</name>
  <version>0.0.1</version>
  <description>Package to communicate with PX4</description>
  <maintainer email="olli.glorioso@aalto.fi">Kaius</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>px4_msgs</depend>
  <depend>std_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>vision_msgs</depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
